# metahack

./: .gitignore  README.md  main.py  pyproject.toml
app/: activities.py  github_client.py  workflow.py
deploy/: 01-objectstore.yaml  02-statestore.yaml
frontend/static/: style.css
frontend/templates/: index.html
tests/: test_github_client.py
